[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyoadfe-hello"
version = "2025.0"
description = "Sample Python package"
readme = "README.md"
authors = [
  {name = "Matwey V. Kornilov", email = "mkornilov@hse.ru"}
]
dependencies = [
  "numpy",
]
requires-python = ">= 3.7"

[project.scripts]
pyoadfe-hello = "pyoadfe_hello:main_cli"
